@@ -1,3 +1,7 @@
+2004-09-06  Michael Schlenker <mic42@users.sourceforge.net>
+
+	* logger.tcl: Removed hardcoded level names in logger::init.
+
 2004-06-18  Andreas Kupries  <andreask@activestate.com>
 
 	* log.man: Fixed bad formatting in documentation of 'logarray'.
